force-app/main/default/objects/ZipAssignmentRequest__c/ZipAssignmentRequest__c.object-meta.xml
<CustomObject>
    <description>Log requests for changing the owner of a zip code</description>
    <label>Zip Assignment Request</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zip Assignment Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>