force-app/main/default/objects/ZipAssignmentRequest__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If this is an open or DSR zip code, or the rep just isn&apos;t in Salesforce.</inlineHelpText>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>