force-app/main/default/objects/ZipAssignmentRequest__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If this is an open or DSR zip code, or the rep just isn&apos;t in Salesforce.</inlineHelpText>
    <label>Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>