force-app/main/default/objects/ZipAssignmentRequest__c/fields/NewTerritory__c.field-meta.xml
<CustomField>
    <fullName>NewTerritory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The new territory we are assigning this zip code to</inlineHelpText>
    <label>New Territory</label>
    <referenceTo>ZipTerritory__c</referenceTo>
    <relationshipLabel>New Territory Requests</relationshipLabel>
    <relationshipName>NewTerritory_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>