force-app/main/default/objects/ZipAssignmentRequest__c/fields/OldTerritory__c.field-meta.xml
<CustomField>
    <fullName>OldTerritory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The territory this is being transferred from</inlineHelpText>
    <label>Old Territory</label>
    <referenceTo>ZipTerritory__c</referenceTo>
    <relationshipLabel>Old Territory Requests</relationshipLabel>
    <relationshipName>OldTerritory_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>