force-app/main/default/objects/ZipAssignmentRequest__c/fields/SentToNSS__c.field-meta.xml
<CustomField>
    <fullName>SentToNSS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was this request sent to NSS?</inlineHelpText>
    <label>Sent To NSS</label>
    <type>Checkbox</type>
</CustomField>