force-app/main/default/objects/ZipAssignmentRequest__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The new owner requested for the zip code</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Zip_Assignment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>