force-app/main/default/objects/ZipAssignmentRequest__c/fields/Zip_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Zip_Assignment__c</fullName>
    <label>Zip Assignment</label>
    <referenceTo>Zip_Assignment__c</referenceTo>
    <relationshipLabel>Zip Assignment Requests</relationshipLabel>
    <relationshipName>ZipAssignmentRequests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>