force-app/main/default/objects/ZipAssignmentRequest__c/listViews/Mark_Hill.listView-meta.xml
<ListView>
    <fullName>Mark_Hill</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LastName__c</columns>
    <columns>Zip_Assignment__c</columns>
    <columns>Zip_Info__c</columns>
    <columns>OldTerritory__c</columns>
    <columns>NewTerritory__c</columns>
    <columns>Status__c</columns>
    <columns>Complete__c</columns>
    <columns>SentToNSS__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Zip_Assignment__c</field>
        <operation>equals</operation>
        <value>82009,80751</value>
    </filters>
    <label>Mark Hill</label>
</ListView>